# elite-whisper

./: .gitignore  App.xaml  App.xaml.cs  EliteWhisper.csproj  EliteWhisper_Setup.iss  EliteWhisper_qw3z5rr4_wpftmp.csproj  Program.cs  README.md  appcast_template.xml  build_log.txt  build_log_2.txt  build_log_3.txt  download_llama.ps1  help.txt  index.html  package-lock.json  package.json  restore_widget_fixed.bat
Controls/: AnimatedCounter.cs  WaveformControl.cs
Converters/: BoolToStringConverter.cs  BooleanToVisibilityConverter.cs  CountToVisibilityConverter.cs  EnumToBooleanConverter.cs  EnumToVisibilityConverter.cs  IconNameToGeometryConverter.cs  StringEqualsConverter.cs  StringEqualsMultiConverter.cs  StringEqualsToVisibilityConverter.cs  StringEqualsToVisibilityMultiConverter.cs  StringNotEqualsToVisibilityConverter.cs  TrendConverters.cs  WaveformConverters.cs
Messages/: RecordAddedMessage.cs
Models/: AIModelRegistryEntry.cs  AppPage.cs  DictationMode.cs  DictationRecord.cs  DownloadableModelInfo.cs  EngineState.cs  GeminiModelInfo.cs  LlamaRuntimeSettings.cs  LlmOptions.cs  LocalAiEngine.cs  LocalModelInfo.cs  PostProcessProfile.cs  PreferredProvider.cs  WhisperConfiguration.cs  WidgetState.cs  WidgetVisualState.cs
Native/: Win32.cs
Resources/: Icons.xaml  models.json  parakeet_vocab.json
Services/: AIEngineService.cs  AudioCaptureService.cs  AudioPlayerService.cs  DebugHelper.cs  DictationService.cs  HistoryService.cs  HotkeyService.cs  IUpdateService.cs  LlamaCppService.cs  LlmService.cs  LocalModelService.cs  ModeService.cs  ModelDownloadService.cs  ModelOutputSanitizer.cs  ModelRegistryService.cs  PostProcessingService.cs  StartupService.cs  TextInjectionService.cs  TrayIconService.cs  UpdateService.cs  (+1 more)
Styles/: Styles.xaml
src-tauri/: .gitignore  Cargo.toml  error_output.txt  error_output_2.txt  tauri.conf.json  transcribe.py
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+76 files in other folders)
