[package]
name = "elite_whisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Lib section removed as code is moved to main.rs

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ "devtools" ] }
whisper-rs = { version = "0.11.1" }
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
enigo = "0.2"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-shell = "2.3.4"
active-win-pos-rs = "0.9.1"


